Edit third section of the content container Fix padding, change method of making the name right aligned, and change font size of the quote

--- a/style.css
+++ b/style.css
@@ -142,26 +142,20 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 26px;
+    font-size: 22px;
+    padding: 60px 80px;
 }
 
 .quote {
     font-style: italic;
     font-weight: lighter;
-    padding: 80px 120px 10px 120px;
-    font-family: 'Hero Light', sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 30px 60px 5px 60px;
 }
 
 .author {
     font-weight: bold;
-    padding: 20px 20px 80px 20px;
-    display: flex;
-    margin-right: 180px;
-    align-self: flex-end;
+    /* make name right aligned */
+    margin-left: auto;
+    margin-right: 0;
 }
 
 /* fourth section of the content container */
